styles/style.css
body {
    /* background-image: url(../images/) ; */
    font-family: Kumbh Sans;
    font-size: 18px;
    background-color: hsl(185, 75%, 39%);
    color:#000;
    margin: 0;
    
}

#container {
    width: 350px;
    margin: 0 auto;
} 

.top {
    width: 100%;
    height: 150px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    background-image: url(../images/bg-pattern-card.svg);
    margin: 0;
}

img { 
    border: 5px solid white;
    border-radius: 50%;
    margin: 0;
}

.middle {
    width: 100%;
    height: 150px;
    background-color: #fff;
    margin: 0;
}

.bottom {
    width: 100%;
    height: 100px;
    background-color: #fff;
    border-top: 1px solid hsl(0, 0%, 59%);
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;
}

.name,
.stats {
    font-size: 18px;
    font-weight: 700;
    color:hsl(229, 23%, 23%);
    text-align: center;
}

.stats_info {
    font-size: 11px;
    font-weight: 400;
    color: hsl(0, 0%, 59%);
}

.location {
    font-size: 14px;
    font-weight: 400;
    color: hsl(0, 0%, 59%);
    padding-top: 40px;
}

.age {
    font-weight: 400;
    color: hsl(0, 0%, 59%);
}

p {
    display: inline-block;
    margin:30px 0px 30px 50px;
}

